Add interval packing for concepts
Co-authored-by: Torben Meyer <torben.meyer@bakdata.com>