@@ -1,61 +1,47 @@
 package com.bakdata.conquery.sql.conversion.cqelement.concept;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
-import com.bakdata.conquery.sql.conversion.model.ColumnDateRange;
-import com.bakdata.conquery.sql.conversion.model.ConceptSelects;
-import com.bakdata.conquery.sql.conversion.model.filter.FilterCondition;
 import com.bakdata.conquery.sql.conversion.model.QueryStep;
-import com.bakdata.conquery.sql.conversion.model.select.SqlSelect;
+import com.bakdata.conquery.sql.conversion.model.Selects;
+import com.bakdata.conquery.sql.conversion.model.filter.FilterCondition;
 import com.bakdata.conquery.sql.conversion.model.select.ExistsSqlSelect;
-import com.bakdata.conquery.sql.conversion.model.select.ExtractingSqlSelect;
+import com.bakdata.conquery.sql.conversion.model.select.SqlSelect;
 import org.jooq.Condition;
 
 class AggregationFilterCte extends ConceptCte {
 
 	@Override
-	public QueryStep.QueryStepBuilder convertStep(CteContext cteContext) {
+	public QueryStep.QueryStepBuilder convertStep(ConceptCteContext conceptCteContext) {
 
-		String aggregationFilterPredecessorCte = cteContext.getConceptTables().getPredecessorTableName(CteStep.AGGREGATION_FILTER);
-
-		final Optional<ColumnDateRange> validityDate;
-		if (cteContext.isExcludedFromDateAggregation()) {
-			validityDate = Optional.empty();
-		}
-		else {
-			validityDate = cteContext.getValidityDateRange().map(_validityDate -> _validityDate.qualify(aggregationFilterPredecessorCte));
-		}
-
-		ConceptSelects aggregationFilterSelect = new ConceptSelects(
-				cteContext.getPrimaryColumn(),
-				validityDate,
-				getAggregationFilterSelects(cteContext, aggregationFilterPredecessorCte)
+		Selects aggregationFilterSelects = Selects.qualified(
+				conceptCteContext.getConceptTables().getPredecessorTableName(ConceptCteStep.AGGREGATION_FILTER),
+				conceptCteContext.getPrimaryColumn(),
+				getForAggregationFilterSelects(conceptCteContext)
 		);
-		List<Condition> aggregationFilterConditions = cteContext.getFilters().stream()
-																.flatMap(conceptFilter -> conceptFilter.getFilters().getGroup().stream())
-																.map(FilterCondition::filterCondition)
-																.toList();
+
+		List<Condition> aggregationFilterConditions = conceptCteContext.getFilters().stream()
+																	   .flatMap(conceptFilter -> conceptFilter.getFilters().getGroup().stream())
+																	   .map(FilterCondition::filterCondition)
+																	   .toList();
 
 		return QueryStep.builder()
-						.selects(aggregationFilterSelect)
+						.selects(aggregationFilterSelects)
 						.conditions(aggregationFilterConditions);
 	}
 
-	private List<SqlSelect> getAggregationFilterSelects(CteContext cteContext, String aggregationFilterPredecessorCte) {
-		return cteContext.getSelects().stream()
-						 .flatMap(sqlSelects -> sqlSelects.getForFinalStep().stream())
-						 // TODO: EXISTS edge case is only in a concepts final select statement and has no predecessor selects
-						 .filter(conquerySelect -> !(conquerySelect instanceof ExistsSqlSelect))
-						 .map(conquerySelect -> ExtractingSqlSelect.fromConquerySelect(conquerySelect, aggregationFilterPredecessorCte))
-						 .distinct()
-						 .collect(Collectors.toList());
+	private List<SqlSelect> getForAggregationFilterSelects(ConceptCteContext conceptCteContext) {
+		return conceptCteContext.getSelects().stream()
+								.flatMap(sqlSelects -> sqlSelects.getForFinalStep().stream())
+								// TODO: EXISTS edge case is only in a concepts final select statement and has no predecessor selects
+								.filter(conquerySelect -> !(conquerySelect instanceof ExistsSqlSelect))
+								.distinct()
+								.toList();
 	}
 
 	@Override
-	public CteStep cteStep() {
-		return CteStep.AGGREGATION_FILTER;
+	public ConceptCteStep cteStep() {
+		return ConceptCteStep.AGGREGATION_FILTER;
 	}
 
 }
