@@ -1,16 +1,16 @@
 package com.bakdata.conquery.sql.conversion.cqelement.concept.filter;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 
 import com.bakdata.conquery.models.common.IRange;
 import com.bakdata.conquery.models.datasets.concepts.filters.specific.NumberFilter;
-import com.bakdata.conquery.sql.conversion.cqelement.concept.CteStep;
+import com.bakdata.conquery.sql.conversion.cqelement.concept.ConceptCteStep;
 import com.bakdata.conquery.sql.conversion.model.filter.ConceptFilter;
 import com.bakdata.conquery.sql.conversion.model.filter.Filters;
-import com.bakdata.conquery.sql.conversion.model.select.SqlSelects;
 import com.bakdata.conquery.sql.conversion.model.filter.NumberCondition;
 import com.bakdata.conquery.sql.conversion.model.select.ExtractingSqlSelect;
+import com.bakdata.conquery.sql.conversion.model.select.SqlSelects;
 
 public class NumberFilterConverter implements FilterConverter<IRange<? extends Number, ?>, NumberFilter<IRange<? extends Number, ?>>> {
 
@@ -22,29 +22,29 @@ public class NumberFilterConverter implements FilterConverter<IRange<? extends N
 		Class<? extends Number> numberClass = NumberMapUtil.NUMBER_MAP.get(numberFilter.getColumn().getType());
 
 		ExtractingSqlSelect<? extends Number> rootSelect = new ExtractingSqlSelect<>(
-				context.getConceptTables().getPredecessorTableName(CteStep.PREPROCESSING),
+				context.getConceptTables().getPredecessorTableName(ConceptCteStep.PREPROCESSING),
 				numberFilter.getColumn().getName(),
 				numberClass
 		);
 
 		NumberCondition condition = new NumberCondition(
-				context.getConceptTables().qualifyOnPredecessorTableName(CteStep.EVENT_FILTER, rootSelect.aliased()),
+				context.getConceptTables().qualifyOnPredecessorTableName(ConceptCteStep.EVENT_FILTER, rootSelect.aliased()),
 				context.getValue()
 		);
 
 		return new ConceptFilter(
 				SqlSelects.builder()
-						  .forPreprocessingStep(Collections.singletonList(rootSelect))
+						  .forPreprocessingStep(List.of(rootSelect))
 						  .build(),
 				Filters.builder()
-					   .event(Collections.singletonList(condition))
+					   .event(List.of(condition))
 					   .build()
 		);
 	}
 
 	@Override
-	public Set<CteStep> requiredSteps() {
-		return CteStep.withOptionalSteps(CteStep.EVENT_FILTER);
+	public Set<ConceptCteStep> requiredSteps() {
+		return ConceptCteStep.withOptionalSteps(ConceptCteStep.EVENT_FILTER);
 	}
 
 	@Override
