@@ -1,14 +1,14 @@
 package com.bakdata.conquery.sql.conversion.cqelement.concept.select;
 
-import java.util.Collections;
+import java.util.List;
 
 import com.bakdata.conquery.models.datasets.concepts.select.connector.specific.DateDistanceSelect;
-import com.bakdata.conquery.sql.conversion.cqelement.concept.CteStep;
-import com.bakdata.conquery.sql.conversion.model.select.SqlSelect;
-import com.bakdata.conquery.sql.conversion.model.select.SqlSelects;
+import com.bakdata.conquery.sql.conversion.cqelement.concept.ConceptCteStep;
 import com.bakdata.conquery.sql.conversion.model.select.DateDistanceSqlSelect;
 import com.bakdata.conquery.sql.conversion.model.select.ExtractingSqlSelect;
 import com.bakdata.conquery.sql.conversion.model.select.MinSqlSelect;
+import com.bakdata.conquery.sql.conversion.model.select.SqlSelect;
+import com.bakdata.conquery.sql.conversion.model.select.SqlSelects;
 import com.bakdata.conquery.sql.conversion.supplier.DateNowSupplier;
 import org.jooq.Field;
 
@@ -26,26 +26,26 @@ public class DateDistanceSelectConverter implements SelectConverter<DateDistance
 
 		SqlSelect rootSelect = new DateDistanceSqlSelect(
 				dateNowSupplier,
-				dateDistanceSelect.getTimeUnit(), context.getConceptTables().getPredecessorTableName(CteStep.PREPROCESSING),
+				dateDistanceSelect.getTimeUnit(), context.getConceptTables().getPredecessorTableName(ConceptCteStep.PREPROCESSING),
 				dateDistanceSelect.getColumn(),
 				dateDistanceSelect.getName(),
 				context.getParentContext().getDateRestrictionRange(),
-				context.getParentContext().getSqlDialect().getFunction()
+				context.getParentContext().getSqlDialect().getFunctionProvider()
 		);
 
-		Field<Object> qualifiedDateDistance = context.getConceptTables().qualifyOnPredecessorTableName(CteStep.AGGREGATION_SELECT, rootSelect.aliased());
+		Field<Object> qualifiedDateDistance = context.getConceptTables().qualifyOnPredecessorTableName(ConceptCteStep.AGGREGATION_SELECT, rootSelect.aliased());
 		MinSqlSelect minDateDistance = new MinSqlSelect(qualifiedDateDistance, dateDistanceSelect.getName());
 
 		ExtractingSqlSelect<Object> firstValueReference = new ExtractingSqlSelect<>(
-				context.getConceptTables().getPredecessorTableName(CteStep.FINAL),
+				context.getConceptTables().getPredecessorTableName(ConceptCteStep.FINAL),
 				minDateDistance.aliased().getName(),
 				Object.class
 		);
 
 		return SqlSelects.builder()
-						 .forPreprocessingStep(Collections.singletonList(rootSelect))
-						 .forAggregationSelectStep(Collections.singletonList(minDateDistance))
-						 .forFinalStep(Collections.singletonList(firstValueReference))
+						 .forPreprocessingStep(List.of(rootSelect))
+						 .forAggregationSelectStep(List.of(minDateDistance))
+						 .forFinalStep(List.of(firstValueReference))
 						 .build();
 	}
 
